--- a/css/styles/style.css
+++ b/css/styles/style.css
@@ -1,136 +1,246 @@
-
-@font-face { font-family: MORVA;
-			 src: url('../fonts/morva/MORVA.ttf');}
- @font-face { font-family: Nexa-Bold;
-  src: url('../fonts/nexa/Nexa Bold.otf');
-}
-@font-face { font-family: Nexa-Light;
- src: url('../fonts/nexa/Nexa Light.otf');
+@font-face {
+	font-family: MORVA;
+	src: url('../fonts/morva/MORVA.ttf');
 }
 
-.nav-link{
+@font-face {
+	font-family: Nexa-Bold;
+	src: url('../fonts/nexa/Nexa Bold.otf');
+}
+
+@font-face {
+	font-family: Nexa-Light;
+	src: url('../fonts/nexa/Nexa Light.otf');
+}
+
+
+body {
+	overflow-x: hidden;
+}
+
+.nav-link {
 	font-family: Nexa-Light;
 }
 
-.Morva{
-	  font-family: MORVA;
+.Morva {
+	font-family: MORVA;
 }
 
-.Nexa-Light{
+.Nexa-Light {
 	font-family: Nexa-Light;
 }
 
-.Nexa-Bold{
+.Nexa-Bold {
 	font-family: Nexa-Bold;
 }
 
-.logo{
-	font-size:5vw;
-	color:white;
+.logo {
+	font-size: 5vw;
+	color: white;
 }
 
-.navbar-brand ,.nav-link{
-	color:white!important;
+.navbar-brand,
+.nav-link {
+	color: white !important;
 }
-nav > button {
-	color:white;
+
+nav>button {
+	color: white;
 }
-@media (min-width:500px)
-{
-	.navbar-brand {
-		margin-left:10rem;
+
+.navbar-brand {
+	margin-left: 10rem;
+}
+
+.about-us {
+	margin-top: 6rem;
+	margin-left: 7rem;
+	border-bottom: 1px solid black;
+}
+
+.about-us>div>p {
+	padding: 0 0 0 10px;
+	border-left: 2px solid black;
+}
+
+.about-us>div>h2 {
+	margin-left: 100px;
+}
+
+.about-us-text {
+	margin-top: 0;
+}
+
+
+@media (max-width:768px) {
+	.about-us {
+		margin-left: 0;
 	}
-	.about-us{
-		margin-top:6rem;
-		margin-left:7rem;
-		border-bottom: 1px solid black;
-	}
-	.about-us > div >p {
-		padding :0 0 0 10px;
-		border-left:2px solid black;
-	}
-	.about-us >div> h2 {
-		margin-left : 100px;
+
+	.about-us-text {
+		margin-top: 0;
 	}
 }
 
-.bg-light{
-	background-color:black!important;
+
+
+
+
+.bg-light {
+	background-color: black !important;
 }
 
 
 
 
-.parent{
-    position: relative;
-    margin: 2em;
+.parent {
+	position: relative;
+	margin: 2em;
 }
 
-.parent img{
-    position: absolute;
+.parent img {
+	position: absolute;
 
 }
 
-.parent .overlay{
-    position: absolute;
-    top: -1em;
-    text-align: center;
+
+
+.parent .overlay {
+	position: absolute;
+	top: 2vw;
+	text-align: center;
 
 }
+
 .overlay {
-	background-color:#fff;
-	width:80%;
-	margin-top:350px;
-	margin-left:100px;
-	font-size : 40px;
-	border-bottom:1px solid black;
-	padding-bottom: 100px;
+	background-color: #fff;
+	width: 80%;
+	margin-top: 350px;
+	margin-left: 100px;
+	font-size: 40px;
+	border-bottom: 1px solid black;
+	padding-bottom: 80px;
 }
+
+
+
+
 .exclusive {
-	margin-top: 570px;
-	margin-left:7rem;
+	margin-top: calc(60vw - 20px);
+}
+
+
+
+.Third-Row {
+	margin-top: 600px;
+}
+
+
+.footer {
+	background-color: black;
+}
+
+.footer>div>div>div>h1 {
+	font-size: 15vw;
+	color: #0e0e0e !important;
+
+}
+
+.sign {
+	background-color: #444444;
+	color: white;
+	border: 0;
+	padding: 10px 20px 10px 20px;
+}
+
+.col>h2 {
+	margin-top: 70px;
+}
+
+.footer>div>div>.col {
+	text-align: center;
+}
+
+.footer>div>div>div>p {
 	font-size: 20px;
 }
-.Third-Row{
-	margin-top:600px;
-}
-.footer {
-	background-color:black;
-}
-.footer > div > div >div > h1{
-	font-size:15vw;
-	color:#0e0e0e!important;
 
-}
-.sign{
- background-color:#444444;
- color:white;
- border: 0;
- padding:10px 20px 10px 20px;
-}
-.col>h2{
-	margin-top:70px;
-}
-
-.footer > div > div >.col{
-	text-align:center;
-}
-.footer > div > div >div > p {
-	font-size:20px;
-}
-input{
-	padding:10px 20px 10px 20px;
-	color:#444444;
+input {
+	padding: 10px 20px 10px 20px;
+	color: #444444;
 	font-family: Nexa-Light;
 }
 
 
-.archive-date{
+.archive-date {
 	margin: 5% 0;
 	font-family: Nexa-Light;
 	font-size: 18px;
 }
 
-.archive-sperator-line{
+.archive-sperator-line {
 	width: 95%;
+}
+
+
+@media (max-width:991px) {
+	.overlay {
+		width: 80%;
+		margin-top: calc(70vh - 25px);
+		margin-left: calc(3vw + 30px);
+		font-size: 25px;
+	}
+
+	.Third-Row {
+		margin-top: 410px;
+	}
+}
+
+@media (max-width:767px) {
+	.about-us {
+		margin-top: 3rem;
+		margin-left: 0px
+	}
+
+	.about-us-text {
+		margin-top: 0vw;
+	}
+
+	.about-us>div>h2 {
+		margin-left: 40px;
+	}
+
+	.overlay {
+		width: 80%;
+		margin-top: 40%;
+		font-size: 20px;
+		padding-bottom: 10%;
+		padding-left: 5%;
+		padding-right: 5%;
+	}
+}
+
+@media (max-width:576px) {
+	.col-xs-6 {
+		width: 50%;
+	}
+
+	.about-us>div>p {
+		font-size: calc(3.5vw - 3px);
+	}
+
+	.about-us>div>h2 {
+		margin-left: 10px;
+		font-size: 6vw;
+	}
+}
+
+@media (max-width:464px) {
+	.overlay {
+		margin-top: 40%;
+		margin-left: 10%;
+		font-size: 12px;
+		padding-bottom: 5%;
+		font-size: calc(1rem - 5px);
+	}
 }
