--- a/css/styles/style.css
+++ b/css/styles/style.css
@@ -49,28 +49,30 @@ nav>button {
 	margin-left: 10rem;
 }
 
-.navbar-toggler:focus, .navbar-toggler:hover {
-    text-decoration: none;
-    border: 0;
+.navbar-toggler:focus,
+.navbar-toggler:hover {
+	text-decoration: none;
+	border: 0;
 	outline: none;
 }
 
-.dropdown-menu{
+.dropdown-menu {
 	background-color: #0e0e0e !important;
 }
 
-.dropdown-item{
+.dropdown-item {
 	color: #fff !important;
 }
 
-.dropdown-item:hover{
+.dropdown-item:hover {
 	background-color: #5d5d5d8c;
 }
 
-.social-nav{
+.social-nav {
 	display: inline-block;
 }
-.social-nav>li{
+
+.social-nav>li {
 	display: inline-block;
 }
 
@@ -83,6 +85,7 @@ nav>button {
 .about-us>div>p {
 	padding: 0 0 0 10px;
 	border-left: 2px solid black;
+	font-size: calc(.5rem + 1.2vw);
 }
 
 .about-us>div>h2 {
@@ -94,71 +97,29 @@ nav>button {
 }
 
 
-@media (max-width:768px) {
-	
-	.about-us {
-		margin-left: 0;
-	}
-
-	.about-us-text {
-		margin-top: 0;
-	}
-}
-
-
-
-
-
 .bg-light {
 	background-color: black !important;
 }
 
-
-
-
-.parent {
-	position: relative;
-	margin: 2em;
-}
-
-.parent img {
-	position: absolute;
-
-}
-
-
-
-.parent .overlay {
-	position: absolute;
-	top: 2vw;
-	text-align: center;
-
-}
-
 .overlay {
+	position: relative;
+	top: -50px;
 	background-color: #fff;
 	width: 80%;
-	margin-top: 350px;
 	margin-left: 100px;
+	padding: 50px;
 	font-size: 40px;
 	border-bottom: 1px solid black;
-	padding-bottom: 80px;
+	text-align: center;
 }
 
-
-
-
-.exclusive {
-	margin-top: calc(60vw - 1rem)
+.best-of{
+	max-height: 350px;
+	/* width: 250px; */
 }
-
-
-
-.Third-Row {
-	margin-top: 600px;
+.of-the-week{
+	max-height: 750px;
 }
-
-
 .footer {
 	background-color: black;
 }
@@ -205,40 +166,51 @@ input {
 	width: 95%;
 }
 
-.img-container{
+.img-container {
 	padding: 30px 0;
 }
 
-.col-md-4>a>img{
-    width: 300px;
-    height: 80%;
-    object-fit: cover;
+.col-md-4>a>img {
+	width: 300px;
+	height: 80%;
+	object-fit: cover;
 }
 
-.img-title{
+.img-title {
 	text-align: center;
 }
 
 
 @media (max-width:991px) {
-	.col-md-4>a>img{
+	.col-md-4>a>img {
 		width: 100% !important;
 	}
-	.social-nav>li{
+
+	.social-nav>li {
 		margin: 0 5px 0 3px;
 	}
+
 	.navbar-brand {
 		margin-left: 0rem;
 	}
+
 	.overlay {
 		width: 80%;
-		margin-top: calc(30	vh - 25px);
+		padding: 50px;
 		margin-left: calc(3vw + 30px);
 		font-size: 25px;
 	}
 
-	.Third-Row {
-		margin-top: 550px;
+}
+
+@media (max-width:768px) {
+
+	.about-us {
+		margin-left: 0;
+	}
+
+	.about-us-text {
+		margin-top: 0;
 	}
 }
 
@@ -258,15 +230,11 @@ input {
 
 	.overlay {
 		width: 80%;
-		margin-top: 40%;
+		padding: 20px;
 		font-size: 20px;
-		padding-bottom: 10%;
-		padding-left: 5%;
-		padding-right: 5%;
+
 	}
-	.Third-Row {
-		margin-top: calc(45vw + 10%);
-	}
+
 }
 
 @media (max-width:576px) {
@@ -286,10 +254,7 @@ input {
 
 @media (max-width:464px) {
 	.overlay {
-		margin-top: 40%;
-		margin-left: 10%;
 		font-size: 12px;
-		padding-bottom: 5%;
-		font-size: calc(1rem - 5px);
+		font-size: calc(1rem);
 	}
 }
