--- a/css/styles/submission.css
+++ b/css/styles/submission.css
@@ -282,11 +282,23 @@ input {
 	background-size:cover;
 	overflow:hidden;
 	position:relative;
-	margin-bottom: 20px;;
+	margin-bottom: 30px;;
+	padding:0;
+
 
 }
+.portfolio .overlayy
+{
+	margin:0;
+	padding:0;
+	width:100%;
+	height:100%;
+	background-color: rgba(0,0,0,0.2);
+}
 
-
+.portfolio .overlayy:hover{
+	background-color:rgba(0,0,0,0);;
+}
 
 .portfolio .container h2
 {
@@ -351,5 +363,161 @@ a:hover
    color:#fff;
    background-color: red;
    margin-bottom: 50px;
+
+}
+ .titree
+{
+	text-align:center;
+	font-weight:bold;
+
+}
+
+.content
+{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-top:100px ;
+}
+
+.content h1
+{
+	margin-bottom:80px;
+}
+
+.peron
+{
+	display: flex;
+	flex-direction: row;
+
+}
+.information_personel
+{
+	display: flex;
+	flex-direction: column;
+
+}
+
+.information_personel label
+{
+	margin: 5px 10px
+}
+
+
+
+
+ input[type="text"]
+{
+	width:400px;
+	display: inline-block;
+	border:1px solid #ccc;
+	border-radius:3px;
+	padding:10px;
+	margin:0 10px;
+}
+
+.email
+{
+	display:flex;
+	flex-direction: column;
+}
+
+.email label{
+	margin:5px 10px;
+}
+
+input[id="email"]
+{
+	width:820px;
+	display: inline-block;
+	border:1px solid #ccc;
+	border-radius:3px;
+	padding:10px;
+	margin:0 10px;
+}
+
+
+.choix
+{
+	display: flex;
+	flex-direction: column;
+}
+
+.choix label
+{
+    margin:8px 12px;
+}
+
+select
+{
+	width:820px;
+	display: inline-block;
+	border:1px solid #ccc;
+	border-radius:3px;
+	padding:10px;
+	margin:0 10px;
+
+
+}
+
+.etoile
+{
+	color:red;
+}
+
+
+.envoyer
+{
+	display: flex;
+	justify-content: center;
+	margin:0 10px;
+}
+
+.env
+{
+	width: 100px;
+	height:50px;
+	border:none;
+	color:#fff;
+	background-color: red;
+	margin-bottom: 50px;
+}
+
+.env:hover
+{
+
+}
+
+input[type="file"]
+{
+	width:820px;
+	display: inline-block;
+	border:1px solid #ccc;
+	border-radius:3px;
+	padding:10px;
+	margin:0 10px;
+
+}
+
+.vos_image
+{
+	display:flex;
+	flex-direction:column ;
+
+}
+
+.vos_image label
+{
+	margin-left: 12px;
+}
+
+
+
+.error_form
+{
+	font-size:15px;
+	color:red;
+	margin:0 10px;;
 
 }
